--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   http: ^1.2.1
   geolocator: ^11.0.0
+  intl: ^0.19.0
+  shared_preferences: ^2.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -60,6 +62,8 @@ flutter:
   uses-material-design: true
   assets:
       - assets/images/
+      - assets/
+      
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
